# self-service-agent-blueprint

./: ARCHITECTURE_DIAGRAMS.md  AUTHENTICATION_GUIDE.md  CLAUDE.md  COMMUNICATION_MODE_SYNC.md  CONTAINER_CONSOLIDATION.md  Containerfile.mcp-template  Containerfile.services-template  Containerfile.template  EMAIL_INTEGRATION_SETUP.md  EVENTING_ALTERNATIVES.md  INTEGRATION_TESTING_GUIDE.md  INTEGRATION_TESTING_SUMMARY.md  Makefile  README.md  REQUEST_MANAGEMENT.md  SLACK_INTEGRATION_SETUP.md  TOOL_INTEGRATION_GUIDE.md  USER_INTEGRATION_MANAGEMENT.md  pyproject.toml
.claude/commands/: review-nightly.md
.claude/scripts/: check_nightly_failures.sh
.github/actions/kind/: action.yaml
.github/workflows/: build-and-push.yaml  create-dev-version-bump-pr.yml  nightly-e2e-long-small-prompt-main.yml  nightly-e2e-prod-dev.yml  pr-e2e-tests.yml  pr-single-commit-check.yml
agent-service/: pyproject.toml
agent-service/config/agents/: laptop-refresh-agent.yaml  routing-agent.yaml
agent-service/config/knowledge_bases/laptop-refresh/: refresh_policy.txt
agent-service/config/lg-prompts/: lg-prompt-big-safer.yaml  lg-prompt-big.yaml  lg-prompt-small-scout.yaml  lg-prompt-small.yaml
agent-service/src/agent_service/: main.py  session_manager.py
agent-service/src/agent_service/langgraph/: lg_flow_state_machine.py  responses_agent.py
agent-service/src/agent_service/utils/: fault_injector.py  llamastack_client.py
asset-manager/: pyproject.toml
asset-manager/config/agents/: laptop-refresh-agent.yaml  routing-agent.yaml
asset-manager/config/prompts/: laptop-refresh-agent.txt  laptop-refresh-llama-4-scout-17b-16e-w4a16.txt
asset-manager/config/toolgroups/: employee-info-mcp.yaml  snow.yaml
asset-manager/src/asset_manager/: agent_manager.py  kb_manager.py  lg_flow_state_machine.py  responses_agent.py  tg_manager.py  util.py
deploy/helm/: Makefile
deploy/helm/self-service-agent/: values.yaml
docs/: SECURITY_ACTION_ITEMS.md  SECURITY_REVIEW.md
evaluations/: README.md  deep_eval.py  evaluate.py  generator.py  get_deepeval_metrics.py  pyproject.toml
evaluations/conversations_config/conversations/: success-flow-1.json
evaluations/helpers/: __init__.py  custom_llm.py  openshift_chat_client.py  structured_llm.py
examples/: helm-deployment-examples.md
guides/: SERVICE_NOW_BOOTSTRAP_AUTOMATED.md  SERVICE_NOW_BOOTSTRAP_MANUAL.md  SERVICE_NOW_SETUP.md  SLACK_SETUP.md
helm/: Chart.yaml  values.yaml
helm/charts/llama-stack-0.5.3/: Chart.yaml
helm/slack-service/: Chart.yaml  values.yaml
helm/slack-service/templates/: _helpers.tpl  deployment.yaml  route.yaml  secret.yaml  (+1 more)
helm/templates/: NOTES.txt  _env-helpers.tpl  _service-deployment.tpl  db-migration-job.yaml  deployment.yaml  external-routes.yaml  knative-kafka.yaml  knative-triggers.yaml  llama-stack-post-init-scaler-job.yaml  mock-eventing-service-deployment.yaml  mock-eventing-setup-job.yaml  promptguard-deployment.yaml  secrets.yaml
integration-dispatcher/: pyproject.toml
mcp-servers/: README.md
mcp-servers/employee-info/: Containerfile  README.md  pyproject.toml  server.py
mcp-servers/helm/: Chart.yaml  values.yaml
mcp-servers/servicenow/: Containerfile  server.py
mcp-servers/snow/: Containerfile  README.md  pyproject.toml
mock-eventing-service/: Containerfile  pyproject.toml
mock-service-now/: Containerfile  README.md  pyproject.toml
promptguard-service/: Containerfile  pyproject.toml
request-manager/: README.md  pyproject.toml
request-manager/tests/: test_authentication.py  test_communication_modes.py  test_normalizer.py
scripts/: add-slack-user.sh  add-user-integration.sh  list-slack-users.sh  remove-slack-user.sh  setup-email-users.sh  start-mcp-servers.sh  test-integrations.sh  webhook-test-server.py
scripts/servicenow-automation/: README.md  api_automation.py  catalog_automation.py  config.example.json  pyproject.toml  setup_servicenow.py  user_automation.py
scripts/servicenow-bootstrap/: config.json
session-manager/: SessionManager.py  __init__.py  pyproject.toml
session-manager/src/session_manager/: session_manager.py  session_manager_base.py  session_manager_responses.py
shared-clients/: README.md  pyproject.toml
shared-clients/src/shared_clients/: __init__.py  request_manager_client.py
shared-db/: pyproject.toml
shared-db/scripts/: migrate.py
shared-db/tests/: test_agent_types.py
slack-service/: Containerfile  README.md  app.py  pyproject.toml
slack-service/src/slack_service/: app.py
test/: chat-request-mgr.py  chat.py
(+62 files in other folders)
