[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-manager"
version = "1.0.0"
description = "Session management service for self-service agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # No external dependencies needed
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py312']
